# fast_zero

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  schemas.py  security.py  settings.py
fast_zero/custom_types/: annotated_types.py
fast_zero/db/: connection.py  models.py  seed.py
fast_zero/helpers/: security.py
fast_zero/routers/: auth.py  todos.py  users.py
fastapi_zero/: app.py  security.py  settings.py
fastapi_zero/db/: connection.py  models.py
migrations/: env.py
migrations/versions/: 267e37187dd4_create_users_table.py  3621fa82590c_add_todos_table.py  5a4fc741d020_add_updated_at_fild_to_users_table.py  d071d73cd1f7_add_updated_at_field_in_todos_table.py
src/fast_zero/: app.py
src/fast_zero/custom_types/: annotated_types.py
src/fast_zero/db/: models.py  seed.py
src/fast_zero/helpers/: settings.py
src/fast_zero/routers/: todos.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_todos.py  test_users.py
